tests/negative/import_export1_a.toit
// Copyright (C) 2018 Toitware ApS. All rights reserved.

import .import_export1_b as foo
import .import_export1_b

export *
